Add classes, add and updating tests